--- a/includes/header.pug
+++ b/includes/header.pug
@@ -1,6 +1,6 @@
 link(href='https://fonts.gstatic.com' rel='preconnect')
 link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
-link(href='../css/index.css' rel='stylesheet' type='text/css')
+link(href='css/index.css' rel='stylesheet' type='text/css')
 link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
 link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js').
