--- a/pages/index.pug
+++ b/pages/index.pug
@@ -38,7 +38,6 @@ html(lang='en')
               span.detail-text Fail safe countermeasures
               br
               span.detail-desc Recover errors easily with protected per device framework
-//      section.light-section.section
-//        h2 Examples
-//
-//        div.
+
+      section.light-section.section
+        h2.text-center Under Construction
