--- a/css/index.css
+++ b/css/index.css
@@ -98,3 +98,65 @@
 .icon-container .material-icons {
     font-size: 34px;
 }
+
+.exampleContainer {
+    padding-top: 20px;
+}
+
+.exampleCard {
+    background-color: #F5EAEF;
+    width: 100%;
+    height: 410px;
+    border-radius: 10px;
+    display: flex;
+}
+
+.exampleBtns {
+    display: block;
+    margin-left: 20px;
+    height: 100%;
+    padding-top: 90px;
+}
+
+.exampleBtn:hover {
+    background-color: #392338;
+}
+
+.exampleBtn:active {
+    background-color: #2c1b2b;
+}
+
+.exampleBtn[active] {
+    background-color: #2c1b2b;
+}
+
+.exampleBtn {
+    width: 195px;
+    height: 50px;
+    text-align: center;
+    background-color: #462B45;
+    color: #FFFFFF;
+    font-size: 24px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    line-height: 50px;
+    border-radius: 7px;
+    user-select: none;
+}
+
+.exampleCodeBlock {
+    width: 100%;
+    height: 100%;
+    padding: 1.5rem;
+}
+
+.examplePage {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.examplePage[active] {
+    display: block;
+}
