--- a/pages/index.pug
+++ b/pages/index.pug
@@ -4,8 +4,15 @@ html(lang='en')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='icon' type='image/png' href='/cdn/img/massive_logo.png')
-    title Ellie
+    link(href='https://fonts.gstatic.com' rel='preconnect')
+    link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
+    link(href='../css/index.css' rel='stylesheet' type='text/css')
+    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
+    link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js').
+    script(src='../js/codev.js' defer).
+    script(src='../js/index.js' defer).
+  title Ellie
   body.d-flex.flex-column.h-100
     include ../includes/header.pug
     main
@@ -38,6 +45,25 @@ html(lang='en')
               span.detail-text Fail safe countermeasures
               br
               span.detail-desc Recover errors easily with protected per device framework
+
+      section.light-section.section
+        h2 Examples
+        .exampleContainer 
+          .exampleCard
+            .exampleBtns
+              .exampleBtn(active target="1")
+                p Classes
+              .exampleBtn(target="2")
+                p Function
+              .exampleBtn(target="3")
+                p Loops
+              .exampleBtn(target="4")
+                p Data Types
+            .exampleCodeBlock
+              .examplePage#examplePage1
+              .examplePage#examplePage2
+              .examplePage#examplePage3
+              .examplePage#examplePage4
 
       section.light-section.section
         h2.text-center Under Construction
