--- a/pages/index.pug
+++ b/pages/index.pug
@@ -13,12 +13,12 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(href='https://fonts.gstatic.com' rel='preconnect')
     link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
-    link(href='../css/index.css' rel='stylesheet' type='text/css')
+    link(href='./css/index.css' rel='stylesheet' type='text/css')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js').
-    script(src='../js/codev.js' defer).
-    script(src='../js/index.js' defer).
+    script(src='./js/codev.js' defer).
+    script(src='./js/index.js' defer).
   title Ellie
   body.d-flex.flex-column.h-100
     include ../includes/header.pug
