--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,7 @@
     .exampleBtn {
         margin-left: 5px;
         margin-right: 5px;
+        font-size: max(1vw, 10px) !important;
     }
 
     .exampleCodeBlock {
@@ -205,7 +206,7 @@
     text-align: center;
     background-color: #462B45;
     color: #FFFFFF;
-    font-size: 3vw;
+    font-size: max(1vw, 20px);
     margin-top: 5px;
     margin-bottom: 5px;
     line-height: 50px;
