--- a/pages/index.pug
+++ b/pages/index.pug
@@ -12,20 +12,21 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(href='https://fonts.gstatic.com' rel='preconnect')
+    link(href='https://fonts.googleapis.com' rel='preconnect')
     link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
-    link(href='./css/index.css' rel='stylesheet' type='text/css')
+    link(href='./css/index.min.css' rel='stylesheet' type='text/css')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js').
-    script(src='./js/codev.js' defer).
-    script(src='./js/index.js' defer).
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js').
+    script(src='./js/codev.min.js' defer).
+    script(src='./js/index.min.js' defer).
   title Ellie
   body.d-flex.flex-column.h-100
     include ../includes/header.pug
     main
       section.theme-section.section.sectionLead
         p.section-one-leader Ellie is a scripting engine that runs on embedded and sandboxed environments.
-        img.section-two-leader(src="../img/controller.png" alt="Ellie Controller" width="285" heigh="285")
+        img.section-two-leader(src="./img/controller.png" alt="Ellie Controller" width="285" heigh="285")
       section.dark-section.section
         .row
           .col
@@ -76,11 +77,11 @@ html(lang='en')
             span.vscodeText VSCode 
             | extension assistance, discover efficient ways for better softwares
           div.feature-photo-r
-            img(src="../img/vs.png")
+            img(src="./img/vs.png")
       section.light-section.section
         .feature-block
           div.feature-photo-l
-            img(src="../img/ellieUp.png" width="500px" height="330px")
+            img(src="./img/ellieUp.png" width="500px" height="330px")
           div.feature-text-r
             | Manage your robotic projects via EllieUp. Create, edit upload your projects to microcontrollers.
       section.dark-section.section
@@ -88,7 +89,7 @@ html(lang='en')
           div.feature-text-l
             | Import native libraries to engine easily have control over runtime
           div.feature-photo-r
-            img(src="../img/natv.png")
+            img(src="./img/natv.png")
 
       section.black-section.section.text-center
         p Ellie Language
