--- a/pages/index.pug
+++ b/pages/index.pug
@@ -6,21 +6,49 @@ html(lang='en')
       |  window.dataLayer = window.dataLayer || [];
       |  function gtag(){dataLayer.push(arguments);}
       |  gtag('js', new Date());
-      |
       |  gtag('config', 'G-ZLTTGZYE80');
     meta(charset='UTF-8')
+
+    // Facebook
+    meta(property="og:type" content="website")
+    meta(property="og:url" content="https://ellie.behemehal.net")
+    meta(property="og:title" content="Ellie Programing Language")
+    meta(property="og:description" content="Ellie is a scripting engine that runs on embedded and sandboxed environments.")
+    meta(property="og:image" content="https://ellie.behemehal.net/img/Social.png")
+
+    
+    // Twitter
+    meta(property='twitter:url' content="https://ellie.behemehal.net")
+    meta(property='twitter:title' content="Ellie Programing Language")
+    meta(property='twitter:description' content="Ellie is a scripting engine that runs on embedded and sandboxed environments.")
+    meta(property='twitter:image' content="https://ellie.behemehal.net/img/Social.png")
+
+    meta(name='title' content='Ellie Programing Language')
+    meta(name='description' content='Ellie is a scripting engine that runs on embedded and sandboxed environments.')
+    meta(name='keywords' content='ellie,ellie programing language,program,programing language,behemehal')
+    meta(name='robots' content='index, follow')
+    meta(name='copyright' content='Behemehal')
+    meta(name='language' content='English')
+    meta(name='distribution' content='global')
+    meta(name='revisit-after' content='5 days')
+    meta(name='author' content='Behemehal')
+
+    meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
+
     link(href='https://fonts.gstatic.com' rel='preconnect')
     link(href='https://fonts.googleapis.com' rel='preconnect')
     link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
     link(href='./css/index.min.css' rel='stylesheet' type='text/css')
+    link(href='./css/theme.min.css' rel='stylesheet' type='text/css')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
     link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js').
-    script(src='./js/codev.min.js' defer).
-    script(src='./js/index.min.js' defer).
-  title Ellie
+
+    script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js')
+    script(src='./js/codev.min.js' defer)
+    script(src='./js/index.min.js' defer)
+  title Ellie Programing Language
   body.d-flex.flex-column.h-100
     include ../includes/header.pug
     main
