Introduce our sponsor

--- a/css/theme.css
+++ b/css/theme.css
@@ -57,6 +57,11 @@
     color: #884A6F;
 }
 
+.sponsors-section {
+    background: #E72F3A;
+    color: #FFFFFF;
+}
+
 .black-section {
     background: #212529;
     color: #884A6F;
