--- a/pages/index.pug
+++ b/pages/index.pug
@@ -117,6 +117,14 @@ html(lang='en')
           .feature-photo-r
             img(src="./img/natv.png")
 
+      section.light-section.section
+        .feature-block
+          .feature-photo-l
+            div.d-flex.justify-content-around
+              iframe.align-content-center(src="https://discord.com/widget?id=803571965276717127&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts")
+          br
+          .feature-text-r
+            | Join our discord community get noticed about new releases
       section.sponsors-section.section
         h1.text-center Our Sponsors
         br
