Add error index

--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -13,3 +13,5 @@ section.black-section.section.text-center.footer
             | Press Kit
         a(target="_blank" href="./about.html")
             | About
+        a(target="_blank" href="./errorIndex.html")
+            | Error Index
