--- a/pages/index.pug
+++ b/pages/index.pug
@@ -117,18 +117,21 @@ html(lang='en')
           .feature-photo-r
             img(src="./img/natv.png")
 
-      section.light-section.section
-        .feature-block
-          .feature-photo-l
-            div.d-flex.justify-content-around
-              iframe.align-content-center(src="https://discord.com/widget?id=803571965276717127&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts")
-          br
-          .feature-text-r
-            | Join our discord community get noticed about new releases
+      //-
+        section.light-section.section
+          .feature-block
+            .feature-photo-l
+              div.d-flex.justify-content-around
+                iframe.align-content-center(src="https://discord.com/widget?id=803571965276717127&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts")
+            br
+            .feature-text-r
+              | Join our discord community get noticed about new releases
+      //-
+      
       section.sponsors-section.section
         h1.text-center Our Sponsors
         br
-        h5.text-center Thanks to our sponsors ellie can be maintained for forever! ❤
+        h5.text-center Thanks to our supporters ellie can be maintained for forever! ❤
         .row.mt-5
           .col
             .detail-container
@@ -136,7 +139,7 @@ html(lang='en')
                 img(src="./img/deployhq.svg" alt="deployhqlg" width="170px")
         br
         .d-flex.text-center.justify-content-center
-          p Interested in becoming a sponsor? Please let us&#160
+          p Interested in becoming a supporter? Please let us&#160
           a(href="mailto:info@behemehal.net?subject=Sponsor") know
 
       include ../includes/footer.pug
