--- a/includes/header_dark.pug
+++ b/includes/header_dark.pug
@@ -1,5 +1,5 @@
 header.pb-3.mb-4
-    nav.navbar.navbar-expand-md.fixed-top.bg-theme.navbar-theme
+    nav.navbar.navbar-expand-md.fixed-top.bg-theme.navbar-theme.dark-section
         .container-fluid
             a.navbar-brand(href='/')
                 span.mt-5.mb-3 Ellie
