--- a/pages/index.pug
+++ b/pages/index.pug
@@ -77,8 +77,8 @@ html(lang='en')
               br
               span.detail-desc Recover errors easily with protected per device framework
 
-      section.light-section.section
-        h2(name="examples") Examples
+      section.light-section.section(id="examples")
+        h2.title Examples
         .exampleContainer 
           .exampleCard
             .exampleBtns
@@ -117,17 +117,6 @@ html(lang='en')
           .feature-photo-r
             img(src="./img/natv.png")
 
-      //-
-        section.light-section.section
-          .feature-block
-            .feature-photo-l
-              div.d-flex.justify-content-around
-                iframe.align-content-center(src="https://discord.com/widget?id=803571965276717127&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts")
-            br
-            .feature-text-r
-              | Join our discord community get noticed about new releases
-      //-
-      
       section.sponsors-section.section
         h1.text-center Our Sponsors
         br
