--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -1,4 +1,4 @@
-section.black-section.section.text-center.footer
+section.black-section.section.text-center.footer(style="margin-top: auto;")
     p Ellie Language
     a(class="imgbh" target="_blank" href="https://behemehal.net")
         img(target="_blank" src="https://behemehal.net/assets/img/bBrand/main.png" width="30" height="30")
