--- a/pages/404.pug
+++ b/pages/404.pug
@@ -40,15 +40,15 @@ html(lang='en')
         link(href='https://fonts.gstatic.com' rel='preconnect')
         link(href='https://fonts.googleapis.com' rel='preconnect')
         link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
-        link(href='./css/index.min.css' rel='stylesheet' type='text/css')
-        link(href='./css/404.css' rel='stylesheet' type='text/css')
-        link(href='./css/theme.css' rel='stylesheet' type='text/css')
+        link(href='https://ellie.behemehal.net/css/index.min.css' rel='stylesheet' type='text/css')
+        link(href='https://ellie.behemehal.net/css/404.css' rel='stylesheet' type='text/css')
+        link(href='https://ellie.behemehal.net/css/theme.css' rel='stylesheet' type='text/css')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
     title Ellie Programing Language - 404
     body.d-flex.flex-column
         include ../includes/header.pug
-        main
+        main.light-section(height="100vh")
             section.section.sectionLead.light-section
                 .feature-block
                     .feature-photo-l
