--- a/pages/releases.pug
+++ b/pages/releases.pug
@@ -56,7 +56,7 @@ html(lang="en")
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
         style
-            |.body { overflow-x: hidden; } //Ugly hack
+            |.body { overflow-x: hidden; }
             |.loader {
             |  border: 16px solid #f3f3f3;
             |  display: block;
