Fix blog issues

--- a/pages/blog.pug
+++ b/pages/blog.pug
@@ -87,7 +87,7 @@ html(lang="en")
     body.d-flex.flex-column.h-100.theme-section(style="height: 100vh !important;")
         include ../includes/header_dark.pug
         main
-            section.dark-section.section(id="rm")
+            section.dark-section.section(id="rm" style="display: none;")
                 h1.text-center Recent Posts
             div.theme-section
                 div.blogs(style="display: none;")
