Add standard rules page

--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -15,3 +15,5 @@ section.black-section.section.text-center.footer(style="margin-top: auto;")
             | About
         a(target="_blank" href="./errorIndex.html")
             | Error Index
+        a(target="_blank" href="./errorIndex.html")
+            | Standard Rules
