--- a/includes/footer.pug
+++ b/includes/footer.pug
@@ -15,5 +15,5 @@ section.black-section.section.text-center.footer(style="margin-top: auto;")
             | About
         a(target="_blank" href="./errorIndex.html")
             | Error Index
-        a(target="_blank" href="./errorIndex.html")
+        a(target="_blank" href="./standardRules.html")
             | Standard Rules
