--- a/pages/standardRules.pug
+++ b/pages/standardRules.pug
@@ -53,7 +53,7 @@ html(lang="en")
         include ../includes/header.pug
         main
             section.theme-section.section
-                h1.text-center Ellie Errors
+                h1.text-center Ellie Standard Rules
                 br
                 p.text-center Standard syntax rules to follow that recommended by ellie
                 br
