--- a/pages/blog.pug
+++ b/pages/blog.pug
@@ -25,16 +25,16 @@ html(lang="en")
 
         // Facebook
         meta(property="og:type" content="website")
-        meta(property="og:url" content="https://ellie.behemehal.net")
+        meta(property="og:url" content="https://www.ellie-lang.org")
         meta(property="og:title" content="Ellie Blog")
         meta(property="og:description" content="Ellie updates, changes and more as blog")
-        meta(property="og:image" content="https://ellie.behemehal.net/img/Social.png")
+        meta(property="og:image" content="https://www.ellie-lang.org/img/Social.png")
 
         // Twitter
-        meta(property='twitter:url' content="https://ellie.behemehal.net")
+        meta(property='twitter:url' content="https://www.ellie-lang.org")
         meta(property='twitter:title' content="Ellie Blog")
         meta(property='twitter:description' content="Ellie updates, changes and more as blog")
-        meta(property='twitter:image' content="https://ellie.behemehal.net/img/Social.png")
+        meta(property='twitter:image' content="https://www.ellie-lang.org/img/Social.png")
 
         meta(name='title' content='Ellie Blog')
         meta(name='description' content='Ellie updates, changes and more as blog')
