--- a/pages/press_kit.pug
+++ b/pages/press_kit.pug
@@ -11,17 +11,17 @@ html(lang='en')
 
         // Facebook
         meta(property="og:type" content="website")
-        meta(property="og:url" content="https://ellie.behemehal.net/press_kit.html")
+        meta(property="og:url" content="https://www.ellie-lang.org/press_kit.html")
         meta(property="og:title" content="Ellie Language - Press Kit")
         meta(property="og:description" content="Art assets and guidelines")
-        meta(property="og:image" content="https://ellie.behemehal.net/img/Social.png")
+        meta(property="og:image" content="https://www.ellie-lang.org/img/Social.png")
 
 
         // Twitter
-        meta(property='twitter:url' content="https://ellie.behemehal.net/press_kit.html")
+        meta(property='twitter:url' content="https://www.ellie-lang.org/press_kit.html")
         meta(property='twitter:title' content="Ellie Language - Press Kit")
         meta(property='twitter:description' content="Art assets and guidelines")
-        meta(property='twitter:image' content="https://ellie.behemehal.net/img/Social.png")
+        meta(property='twitter:image' content="https://www.ellie-lang.org/img/Social.png")
 
         meta(name='title' content='Ellie Language - Press Kit')
         meta(name='description' content='Art assets and guidelines')
