--- a/pages/404.pug
+++ b/pages/404.pug
@@ -11,17 +11,17 @@ html(lang='en')
 
         // Facebook
         meta(property="og:type" content="website")
-        meta(property="og:url" content="https://ellie.behemehal.net")
+        meta(property="og:url" content="https://www.ellie-lang.org")
         meta(property="og:title" content="Ellie Programing Language")
         meta(property="og:description" content="Ellie is a scripting engine that runs on embedded and sandboxed environments.")
-        meta(property="og:image" content="https://ellie.behemehal.net/img/Social.png")
+        meta(property="og:image" content="https://www.ellie-lang.org/img/Social.png")
 
 
         // Twitter
-        meta(property='twitter:url' content="https://ellie.behemehal.net")
+        meta(property='twitter:url' content="https://www.ellie-lang.org")
         meta(property='twitter:title' content="Ellie Programing Language")
         meta(property='twitter:description' content="Ellie is a scripting engine that runs on embedded and sandboxed environments.")
-        meta(property='twitter:image' content="https://ellie.behemehal.net/img/Social.png")
+        meta(property='twitter:image' content="https://www.ellie-lang.org/img/Social.png")
 
         meta(name='title' content='Ellie Programing Language')
         meta(name='description' content='Ellie is a scripting engine that runs on embedded and sandboxed environments.')
@@ -40,9 +40,9 @@ html(lang='en')
         link(href='https://fonts.gstatic.com' rel='preconnect')
         link(href='https://fonts.googleapis.com' rel='preconnect')
         link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
-        link(href='https://ellie.behemehal.net/css/index.min.css' rel='stylesheet' type='text/css')
-        link(href='https://ellie.behemehal.net/css/404.css' rel='stylesheet' type='text/css')
-        link(href='https://ellie.behemehal.net/css/theme.css' rel='stylesheet' type='text/css')
+        link(href='https://www.ellie-lang.org/css/index.min.css' rel='stylesheet' type='text/css')
+        link(href='https://www.ellie-lang.org/css/404.css' rel='stylesheet' type='text/css')
+        link(href='https://www.ellie-lang.org/css/theme.css' rel='stylesheet' type='text/css')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
     title Ellie Programing Language - 404
