--- a/pages/about.pug
+++ b/pages/about.pug
@@ -13,16 +13,16 @@ html(lang="en")
 
         // Facebook
         meta(property="og:type" content="website")
-        meta(property="og:url" content="https://ellie.behemehal.net")
+        meta(property="og:url" content="https://www.ellie-lang.org")
         meta(property="og:title" content="About Ellie")
         meta(property="og:description" content="What is ellie?")
-        meta(property="og:image" content="https://ellie.behemehal.net/img/Social.png")
+        meta(property="og:image" content="https://www.ellie-lang.org/img/Social.png")
 
         // Twitter
-        meta(property='twitter:url' content="https://ellie.behemehal.net")
+        meta(property='twitter:url' content="https://www.ellie-lang.org")
         meta(property='twitter:title' content="About Ellie")
         meta(property='twitter:description' content="What is ellie?")
-        meta(property='twitter:image' content="https://ellie.behemehal.net/img/Social.png")
+        meta(property='twitter:image' content="https://www.ellie-lang.org/img/Social.png")
 
         meta(name='title' content='About Ellie')
         meta(name='description' content='What is ellie?')
