--- a/pages/404.pug
+++ b/pages/404.pug
@@ -46,7 +46,7 @@ html(lang='en')
         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
     title Ellie Programing Language - 404
-    body.d-flex.flex-column
+    body.d-flex.flex-column.light-section
         include ../includes/header.pug
         main.light-section(height="100vh")
             section.section.sectionLead.light-section
