--- a/pages/blog.pug
+++ b/pages/blog.pug
@@ -49,7 +49,7 @@ html(lang="en")
         meta(http-equiv='Content-Type' content='text/html; charset=utf-8')
         meta(http-equiv='X-UA-Compatible' content='IE=edge')
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
-        link(rel="icon" href="https://ellie.behemehal.net/img/EllieCharIcon@0,1x.png" type="image/x-icon")
+        link(rel="icon" href="https://www.elllie-lang.org/img/EllieCharIcon@0,1x.png" type="image/x-icon")
         link(href='https://fonts.gstatic.com' rel='preconnect')
         link(href='https://fonts.googleapis.com' rel='preconnect')
         link(href='https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap' rel='stylesheet')
