--- a/includes/header.pug
+++ b/includes/header.pug
@@ -11,3 +11,5 @@ header.pb-3.mb-4
                     a.nav-link.px-2(href='./blog.html') Blog
                 li
                     a.nav-link.px-2(href='./releases.html') Releases
+                li
+                    a.nav-link.px-2(href='https://lia.ellie-lang.org') Lia
