--- a/pages/press_kit.pug
+++ b/pages/press_kit.pug
@@ -43,7 +43,9 @@ html(lang='en')
         link(href='./css/index.min.css' rel='stylesheet' type='text/css')
         link(href='./css/theme.min.css' rel='stylesheet' type='text/css')
         link(href='./css/press_kit.css' rel='stylesheet' type='text/css')
-        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous")
+
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
         script(src='./js/codev.min.js' defer)
         script(src='./js/index.min.js' defer)
