--- a/pages/standardRules.pug
+++ b/pages/standardRules.pug
@@ -46,7 +46,8 @@ html(lang="en")
         link(href='./css/index.min.css' rel='stylesheet' type='text/css')
         link(href='./css/theme.css' rel='stylesheet' type='text/css')
         link(href='./css/err.min.css' rel='stylesheet' type='text/css')
-        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css' rel='stylesheet')
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous")
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet')
         title Ellie Standard Rules
     body.d-flex.flex-column.h-100
