--- a/pages/404.pug
+++ b/pages/404.pug
@@ -54,7 +54,7 @@ html(lang='en')
             section.section.sectionLead.light-section
                 .feature-block
                     .feature-photo-l
-                        img(src="./img/404-light.png")
+                        img(src="/img/404-light.png")
                     .feature-text-l
                         | The page you're looking for is not found
         include ../includes/footer.pug
