--- a/includes/header_dark.pug
+++ b/includes/header_dark.pug
@@ -12,4 +12,6 @@ header.pb-3.mb-4
                 li
                     a.nav-link.px-2(href='./releases.html') Releases
                 li
+                    a.nav-link.px-2(href='https://docs.ellie-lang.org') Docs
+                li
                     a.nav-link.px-2(href='https://lia.ellie-lang.org') Lia
