--- a/pages/index.pug
+++ b/pages/index.pug
@@ -105,7 +105,7 @@ html(lang='en')
           | Ellie is not yet complete project. you can follow the progress 
           a(href="./blog.html") here
       section.theme-section.section.sectionLead
-        p.section-one-leader Ellie is a scripting engine that runs on embedded and sandboxed environments.
+        p.section-one-leader Ellie is a type-safe programing language that runs on embedded and sandboxed environments. 
         img.section-two-leader(src="./img/controller.png" alt="Ellie Controller" width="285" heigh="285")
       section.dark-section.section
         .row
